<resources>
    <string name="app_name">RecipeGPT</string>
    <string name="app_title">RecipeGPT</string>

    <string name="search_hint">Generate recipes…</string>


    <string name="no_recipes">No Recipes</string>
    <string name="saved_recipes">Saved Recipes</string>
    <string name="shopping_list">Shopping List</string>
    <string name="preferences">Preferences</string>
    <string name="search_icon">Search Icon</string>
    <string name="menu_home">Home</string>
    <string name="menu_saved_recipes">Recipes</string>
    <string name="menu_shopping_list">Shopping List</string>
    <string name="menu_preferences">Preferences</string>
    <string name="recipe_details">Details</string>
    <string name="max_results_label">Maximum Number of Results</string>
    <string name="max_results_hint">e.g. 100</string>
    <string name="save_preferences_button_label">Save Preferences</string>
    <string name="random_quote_fetching_frequency">Random Quote Fetching Frequency</string>
    <string name="random_quote_frequency_description">Set how often random quotes should be fetched.</string>
    <string name="max_results_description">Set the maximum number of recipes to display in generated results. The more results the slower the process.</string>
    <string name="recipe_title_placeholder">Recipe Title</string>
    <string name="cooking_time_placeholder">Cooking Time: %1$d mins</string>
    <string name="servings_placeholder">Servings: %1$d</string>
    <string name="ingredients_header">Ingredients</string>
    <string name="instructions_header">Instructions</string>
    <string name="save_button">Save</string>
    <string name="cook_button">Cooked</string>
    <string name="recipe_details_page_title">Recipe Details</string>
    <string name="instruction_step_placeholder">Step %1$d: %2$s</string>
    <string name="ingredient_amount_placeholder">%1$s %2$s</string>
    <string name="recipe_description_placeholder">Servings: %1$d, Time: %2$d min</string>
    <string name="share_button_description">Share this recipe</string>
    <string name="cooking_quote_notification_title">Cooking Quote</string>
    <string name="error">Error</string>
    <string name="failed_to_fetch_random_quote">Failed to fetch a random quote. Please try again later.</string>
    <string name="network_error">Network error: %1$s</string>
    <string name="unexpected_error">Unexpected error: %1$s</string>
    <string name="recipes_search_title">Recipes Generation</string>
    <string name="recipes_search_complete_title">Recipes Generation Complete</string>
    <string name="unknown_query">unknown query</string>
    <string name="search_starting_message">Calling the API…</string>
    <string name="search_in_progress_message">Generating recipes with &quot;%1$s&quot;…</string>
    <string name="search_elapsed_time_message">Generating recipes with &quot;%1$s&quot;… (%2$d seconds elapsed)</string>
    <string name="search_complete_message">It took %1$d seconds to generate recipes with &quot;%2$s&quot;</string>
    <string name="menu_saved_ingredients">Ingredients</string>
    <string name="unsave_button_text">Unsave</string>
    <string name="save_button_text">Save</string>
    <string name="saved_recipes_search_hint">Search for saved recipes</string>
    <string name="filter">Filter saved recipes</string>
    <string name="most_recent_filter">Most Recent</string>
    <string name="most_servings_filter">Most Servings</string>
    <string name="shortest_cooking_time">Shortest cooking time</string>

    <string name="minutes_15">15 minutes</string>
    <string name="hour_1">1 hour</string>
    <string name="hours_3">3 hours</string>
    <string name="once_per_day">Once per day</string>
    <string name="never">Never</string>
    <string name="purchased_ingredient">purchased ingredient</string>
    <string name="no_ingredients">No Ingredients</string>

    <string name="ingredients_search_hint">Search Ingredients</string>
    <string name="ingredient_popup_title">Set added amount for %1$s</string>
    <string name="saved_ingredient_popup_title">Edit amount for %1$s</string>

    <string name="enter_amount">Enter amount</string>
    <string name="done">Done</string>

    <string name="teaspoons">teaspoons</string>
    <string name="tablespoons">tablespoons</string>
    <string name="kilograms">kilograms</string>
    <string name="grams">grams</string>
    <string name="cups">cups</string>
    <string name="liters">liters</string>
    <string name="milliliters">milliliters</string>
    <string name="piece_about_50_grams">pieces (about 50 grams each)</string>
    <string name="piece_about_100_grams">pieces (about 100 grams each)</string>
    <string name="piece_about_250_grams">pieces (about 250 grams each)</string>
    <string name="whole_pieces">pieces</string>
    <string name="teaspoons_solid">teaspoons (solid)</string>
    <string name="tablespoons_solid">tablespoons (solid)</string>

    <string name="timeout_error_message">Fetching recipes for "%1$s" took too long. Please try again.</string>
    <string name="generic_error_message">An error occurred while fetching recipes. Please try again later.</string>
    <string name="timeout_error_title">Timeout Error</string>
    <string name="generic_error_title">Error Fetching Recipes</string>
    <string name="save_recipe">Save recipe</string>
    <string name="list_ingredients">List ingredients of recipe</string>
    <string name="saved_preferences">Saved Preferences!</string>
    <string name="preferences_error_message">Please enter a valid maximum number of results.</string>
    <string name="not_enough_ingredients">Not enough ingredients!</string>
    <string name="recipe_cooked_successfully">Recipe cooked successfully!</string>
    <string name="recipes_generation_in_process">Wait for the current prompt to be processed!</string>
    <string name="milligrams">milligrams</string>
    <string name="drops">drops</string>
    <string name="saved_ingredients">Ingredients</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_purchased_ingredient">Edit the purchased ingredient</string>
    <string name="delete_purchased_ingredientt">Delete the purchased ingredient</string>
    <string name="invalid_amount_warning">Invalid amount for ingredient</string>
    <string name="invalid_input_ingredient_popup">Invalid input</string>

</resources>