<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/menu_saved_recipes"
        android:icon="@drawable/ic_saved_recipes"
        android:title="@string/menu_saved_recipes" />
    <item
        android:id="@+id/menu_shopping_list"
        android:icon="@drawable/ic_shopping_list"
        android:title="@string/menu_shopping_list" />
    <item
        android:id="@+id/menu_saved_ingredients"
        android:icon="@drawable/ic_saved_ingredients"
        android:title="@string/menu_saved_ingredients" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings" />
</menu>


