<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="?attr/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="25dp">

        <!-- Recipe Details Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/recipeDetailsTitle"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/recipe_details_page_title"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="?attr/colorPrimary"
                android:layout_marginBottom="40dp" />

            <!-- Recipe Title -->
            <TextView
                android:id="@+id/recipeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_title_placeholder"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnBackground"
                android:layout_marginBottom="16dp" />

            <!-- Estimated Cooking Time and Servings -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="40dp">

                <TextView
                    android:id="@+id/recipeServings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/servings_placeholder"
                    android:textSize="16sp"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:id="@+id/recipeCookingTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cooking_time_placeholder"
                    android:textSize="16sp"
                     />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/horizontal_line" />
        </LinearLayout>

        <!-- Ingredients Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <!-- Ingredients Header -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredients_header"
                android:textColor="?attr/colorOnBackground"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <!-- Ingredients List -->
            <LinearLayout
                android:id="@+id/ingredientsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/horizontal_line" />
        </LinearLayout>

        <!-- Instructions Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="24dp">

            <!-- Instructions Header -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instructions_header"
                android:textColor="?attr/colorOnBackground"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <!-- Instructions List -->
            <LinearLayout
                android:id="@+id/instructionsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/horizontal_line" />

        </LinearLayout>

        <!-- Save and Cook Buttons -->
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <ImageButton
                android:id="@+id/saveButton"
                android:layout_width="48dp"
                android:layout_marginEnd="16dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_recipe_not_saved"
                android:contentDescription="@string/save_recipe"
                android:background="@drawable/rounded_rectangle_border"
                app:tint="?attr/colorPrimary" />


            <ImageButton
                android:id="@+id/listIngredients"
                android:layout_width="48dp"
                android:layout_marginEnd="16dp"
                android:layout_height="48dp"
                android:padding="6dp"
                android:src="@drawable/ic_shopping_list"
                android:scaleType="fitCenter"
                android:contentDescription="@string/list_ingredients"
                android:background="@drawable/rounded_rectangle_border"
                app:tint="?attr/colorPrimary" />

            <ImageButton
                android:id="@+id/cookButton"
                android:layout_width="48dp"
                android:layout_marginEnd="16dp"
                android:layout_height="48dp"
                android:padding="6dp"
                android:src="@drawable/ic_cooked_recipe"
                android:scaleType="fitCenter"
                android:contentDescription="@string/cook_button"
                android:background="@drawable/rounded_rectangle_border"
                app:tint="?attr/colorPrimary" />

            <ImageButton
                android:id="@+id/shareButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_share"
                android:contentDescription="@string/share_button_description"
                android:background="@drawable/rounded_rectangle_border"
                app:tint="?attr/colorPrimary" />
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
