<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="25dp"
    android:padding="16dp"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preferences"
            android:textColor="?attr/colorPrimary"
            android:textSize="24sp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:textStyle="bold" />
        <!-- Random Quote Fetching Frequency -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingVertical="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/randomQuoteFrequencySelector"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/randomQuoteFrequencyTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/random_quote_fetching_frequency"
                    android:textSize="18sp"
                    android:textColor="?attr/colorOnBackground"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/randomQuoteFrequencyDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/random_quote_frequency_description"
                    android:textSize="14sp"
                    android:ellipsize="end"
                />
            </LinearLayout>

            <Spinner
                android:id="@+id/randomQuoteFrequencySelector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:minHeight="48dp"
                android:entries="@array/quote_fetching_frequencies" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/horizontal_line" />

        <!-- Maximum Number of Recipe Results -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:paddingVertical="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/maxResultsInput"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/maxResultsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorOnBackground"
                    android:text="@string/max_results_label"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/maxResultsDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_results_description"
                    android:textSize="14sp"
                    android:ellipsize="end"
                     />
            </LinearLayout>

            <EditText
                android:id="@+id/maxResultsInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:autofillHints="false"
                android:padding="8dp"
                android:maxLength="3"
                android:minHeight="48dp"
                android:hint="@string/max_results_hint"
                android:inputType="number" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/horizontal_line" />

        <!-- Save Button -->
        <Button
            android:id="@+id/saveSettingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="32dp"
            android:paddingVertical="8dp"
            android:text="@string/save_preferences_button_label"
            android:textStyle="bold"
            android:background="@drawable/rounded_rectangle_border"
            android:textColor="?attr/colorPrimary" />
    </LinearLayout>
</ScrollView>
