<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    android:layout_marginTop="25dp"
    android:padding="16dp"
    >


    <!-- Title at the Top -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/saved_recipes"
        android:textColor="?attr/colorPrimary"
        android:layout_marginBottom="40dp"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Row Containing Search Bar and Filter Selector -->
    <LinearLayout
        android:id="@+id/searchRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:layout_marginVertical="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@drawable/rounded_rectangle_border"
        android:baselineAligned="false"
        android:paddingVertical="6dp">



        <!-- Search Bar -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"

            app:boxBackgroundMode="none"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@android:color/transparent"
            >

            <EditText
                android:id="@+id/searchSavedRecipes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/saved_recipes_search_hint"
                android:inputType="text"
                android:textSize="18sp"
                android:textColor="?attr/colorOnBackground"
                android:textColorHint="?attr/colorOnSurface"
                android:backgroundTint="@android:color/transparent"
                android:importantForAutofill="no"
                android:backgroundTintMode="src_in"
                android:imeOptions="actionSearch"

                />
        </com.google.android.material.textfield.TextInputLayout>




    </LinearLayout>

    <!-- RecyclerView for Recipe List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/savedRecipesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/searchRow"
        android:backgroundTint="?attr/colorSurface"
        android:backgroundTintMode="screen"
        android:clipToPadding="false"
        android:scrollbars="vertical" />

    <!-- Empty State Text -->
    <TextView
        android:id="@+id/noSavedRecipesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/no_recipes"
        android:textColor="?attr/colorOnBackground"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible" />
</RelativeLayout>